# anh-reporter-showcase-es

./: .env.example  .gitignore  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  create_github_repo.sh  docker-compose.yml  install.sh  start.sh
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: alerts.py  auth.py  dashboard.py  reports.py  telemetry.py  wells.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  alert.py  audit.py  report.py  telemetry.py  user.py
backend/app/schemas/: telemetry.py  user.py
backend/app/services/: seed_data.py
docker/postgres/: init.sql
docs/: ARQUITECTURA_TECNICA.md  CASOS_DE_EXITO.md  DIAGRAMAS_ARQUITECTURA.md  ESCENARIOS_APLICACION.md  QUICKSTART.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: Alerts.vue  Dashboard.vue  Reports.vue  Telemetry.vue
rust-engine/: Cargo.toml  Dockerfile
rust-engine/src/: main.rs
